@@ -33,7 +33,7 @@ public class XPathCountSelectedFunc extends XPathFuncExpr {
         }
 
         String s = (String)evalResult;
-        return new Double(DataUtil.splitOnSpaces(s).length);
+        return Double.valueOf(DataUtil.splitOnSpaces(s).length);
     }
 
 }
